@@ -1,4 +1,8 @@
-2010-10-17  Bob Halley  <halley@dnspython.org> 
+2010-10-17  Bob Halley  <halley@dnspython.org>
+
+	* dns/dnssec.py: Added key_id() and make_ds().
+
+2010-10-17  Bob Halley  <halley@dnspython.org>
 
 	* dns/message.py: message.py needs to import dns.edns since it uses
 	  it.
